--- a/layout/Controle/buttonNot/buttonNote.qrc
+++ b/layout/Controle/buttonNot/buttonNote.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource prefix="button">
+    <file>Com.png</file>
     <file>email.png</file>
     <file>imei.png</file>
     <file>local.png</file>
