--- a/layout/opNote.ui
+++ b/layout/opNote.ui
@@ -637,6 +637,16 @@ background-repeat: no-repeat;</string>
            </item>
            <item>
             <property name="text">
+             <string>ESTOQUE TI</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>ESTOQUE UAD</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
              <string>U. G. Pessoas</string>
             </property>
            </item>
